[gd_scene load_steps=18 format=3 uid="uid://bm76in6mxgs34"]

[ext_resource type="Script" path="res://enemy.gd" id="1_ddthi"]
[ext_resource type="Texture2D" uid="uid://sxbvyps61lyr" path="res://Sprites/BlueBadGuy_ArmsUp.png" id="2_1u0i3"]
[ext_resource type="Texture2D" uid="uid://c3u2f1truc1di" path="res://Sprites/BlueBadGuy_ArmsDown.png" id="3_l01hh"]
[ext_resource type="Texture2D" uid="uid://g2cjocoqvg45" path="res://Sprites/CyanBadGuy_ArmsUp.png" id="4_cp4wv"]
[ext_resource type="Texture2D" uid="uid://5scrxvhiv28h" path="res://Sprites/RedBadGuy_ArmsUp.png" id="4_iq4o3"]
[ext_resource type="Texture2D" uid="uid://cq2gwqn5hvm41" path="res://Sprites/RedBadGuy_ArmsDown.png" id="5_u4x8k"]
[ext_resource type="Texture2D" uid="uid://8i0ldhclk0cv" path="res://Sprites/CyanBadGuy_ArmsDown.png" id="5_xh11i"]
[ext_resource type="Texture2D" uid="uid://dcea1buhu3srh" path="res://Sprites/GreenBadGuy_ArmsUp.png" id="6_ymc8j"]
[ext_resource type="Texture2D" uid="uid://vavfwq8i0bre" path="res://Sprites/GreenBadGuy_ArmsDown.png" id="7_cvrdn"]
[ext_resource type="Texture2D" uid="uid://ds3bvyeyykxnx" path="res://Sprites/MagentaBadGuy_ArmsUp.png" id="8_g6t2i"]
[ext_resource type="Texture2D" uid="uid://b1sa2akhh5px4" path="res://Sprites/MagentaBadGuy_ArmsDown.png" id="9_bnhmi"]
[ext_resource type="Texture2D" uid="uid://cs7sqv0s5t080" path="res://Sprites/YellowBadGuy_ArmsUp.png" id="12_is7wk"]
[ext_resource type="Texture2D" uid="uid://bx11dhibdyt86" path="res://Sprites/YellowBadGuy_ArmsDown.png" id="13_on8g4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u5y1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1u0i3")
}, {
"duration": 1.0,
"texture": ExtResource("3_l01hh")
}],
"loop": true,
"name": &"Blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cp4wv")
}, {
"duration": 1.0,
"texture": ExtResource("5_xh11i")
}],
"loop": true,
"name": &"Cyan",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ymc8j")
}, {
"duration": 1.0,
"texture": ExtResource("7_cvrdn")
}],
"loop": true,
"name": &"Green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_g6t2i")
}, {
"duration": 1.0,
"texture": ExtResource("9_bnhmi")
}],
"loop": true,
"name": &"Magenta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_iq4o3")
}, {
"duration": 1.0,
"texture": ExtResource("5_u4x8k")
}],
"loop": true,
"name": &"Red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_is7wk")
}, {
"duration": 1.0,
"texture": ExtResource("13_on8g4")
}],
"loop": true,
"name": &"Yellow",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_gf3is"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vl32j"]
size = Vector2(76, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_an4cd"]
radius = 23.0

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(118, 22)
script = ExtResource("1_ddthi")

[node name="Enemy_Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 5.04871e-29)
scale = Vector2(0.754, 0.75)
sprite_frames = SubResource("SpriteFrames_u5y1d")
animation = &"Blue"

[node name="Enemy_HitBox" type="Area2D" parent="."]
collision_layer = 3
script = SubResource("GDScript_gf3is")

[node name="HitBox_Area" type="CollisionShape2D" parent="Enemy_HitBox"]
shape = SubResource("RectangleShape2D_vl32j")

[node name="Stage_Dectection_Area" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_an4cd")

[node name="Attack_Cooldown_Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="Enemy_HitBox" to="." method="_on_enemy_hit_box_body_entered"]
[connection signal="body_exited" from="Enemy_HitBox" to="." method="_on_enemy_hit_box_body_exited"]
[connection signal="timeout" from="Attack_Cooldown_Timer" to="." method="_on_attack_cooldown_timer_timeout"]
