[gd_scene load_steps=5 format=3 uid="uid://bm76in6mxgs34"]

[ext_resource type="Texture2D" uid="uid://ilv5y37tq1bc" path="res://Sprites/red_bad_guy_demo1.png" id="1_34bgd"]
[ext_resource type="Script" path="res://enemy.gd" id="1_ddthi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfbcd"]
size = Vector2(145, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8aop0"]
size = Vector2(38, 1)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_ddthi")

[node name="Bad_Guy_Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_34bgd")

[node name="Detection_Area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Decetion_Collision_Area" type="CollisionShape2D" parent="Detection_Area"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_xfbcd")

[node name="Stage_Dectection_Area" type="CollisionShape2D" parent="."]
position = Vector2(0, 23.5)
shape = SubResource("RectangleShape2D_8aop0")

[connection signal="body_entered" from="Detection_Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_detection_area_body_exited"]
